@@ -32,6 +32,7 @@ import org.eclipse.swt.SWT;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Text;
+import org.eclipse.ui.IEditorPart;
 import org.eclipse.ui.IWorkbenchPartSite;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
@@ -47,7 +48,9 @@ import org.jkiss.dbeaver.model.exec.jdbc.JDBCResultSet;
 import org.jkiss.dbeaver.model.exec.jdbc.JDBCSession;
 import org.jkiss.dbeaver.model.exec.jdbc.JDBCStatement;
 import org.jkiss.dbeaver.model.impl.AbstractExecutionSource;
+import org.jkiss.dbeaver.model.impl.AbstractStatement;
 import org.jkiss.dbeaver.model.impl.jdbc.JDBCUtils;
+import org.jkiss.dbeaver.model.impl.local.LocalStatement;
 import org.jkiss.dbeaver.model.impl.local.StatResultSet;
 import org.jkiss.dbeaver.model.preferences.DBPPreferenceStore;
 import org.jkiss.dbeaver.model.qm.QMUtils;
@@ -71,6 +74,7 @@ import org.jkiss.dbeaver.ui.UIUtils;
 import org.jkiss.dbeaver.ui.controls.resultset.ResultSetPreferences;
 import org.jkiss.dbeaver.ui.dialogs.ConfirmationDialog;
 import org.jkiss.dbeaver.ui.dialogs.exec.ExecutionQueueErrorJob;
+import org.jkiss.dbeaver.ui.editors.IncludedScriptFileEditorInput;
 import org.jkiss.dbeaver.ui.editors.sql.SQLPreferenceConstants;
 import org.jkiss.dbeaver.ui.editors.sql.SQLPreferenceConstants.StatisticsTabOnExecutionBehavior;
 import org.jkiss.dbeaver.ui.editors.sql.SQLResultsConsumer;
@@ -110,7 +114,7 @@ public class SQLQueryJob extends DataSourceJob
     private DBDDataFilter dataFilter;
     private boolean connectionInvalidated = false;
 
-    private SQLScriptCommitType commitType;
+    private final SQLScriptCommitType commitType;
     private SQLScriptErrorHandling errorHandling;
     private boolean fetchResultSets;
     private long rsOffset;
@@ -171,7 +175,7 @@ public class SQLQueryJob extends DataSourceJob
 
     public SQLScriptElement getLastQuery()
     {
-        return queries.isEmpty() ? null : queries.get(0);
+        return queries.isEmpty() ? null : queries.getFirst();
     }
 
     public SQLScriptElement getLastGoodQuery() {
@@ -263,13 +267,14 @@ public class SQLQueryJob extends DataSourceJob
                         }
                         // Ask to continue
                         log.error(lastError);
-                        boolean isQueue = queryNum < queries.size() - 1;
+                        boolean isQueue = isQueue();
                         DBPPlatformUI.UserResponse response = ExecutionQueueErrorJob.showError(
                             isQueue ? "SQL script execution" : "SQL query execution",
                             lastError,
                             isQueue);
 
                         boolean stopScript = false;
+                        boolean tryAgain = false;
                         switch (response) {
                             case STOP:
                                 // just stop execution
@@ -277,18 +282,23 @@ public class SQLQueryJob extends DataSourceJob
                                 break;
                             case RETRY:
                                 // just make it again
-                                this.schedule(100);
+                                tryAgain = true;
                                 break;
                             case IGNORE:
-                                // Just do nothing
+                                // ignore error
+                                lastError = null;
                                 break;
                             case IGNORE_ALL:
+                                lastError = null;
                                 errorHandling = SQLScriptErrorHandling.IGNORE;
                                 break;
                         }
 
                         if (stopScript) {
                             break;
+                        } else if (tryAgain) {
+                            RuntimeUtils.pause(100);
+                            continue;
                         }
                     }
 
@@ -361,6 +371,12 @@ public class SQLQueryJob extends DataSourceJob
         }
     }
 
+    private boolean isQueue() {
+        boolean isIncludedScript = partSite.getPart() instanceof IEditorPart ep &&
+            ep.getEditorInput() instanceof IncludedScriptFileEditorInput;
+        return isIncludedScript || queryNum < queries.size() - 1;
+    }
+
     @NotNull
     private SqlJobResult getSqlJobResult() {
         if (queries.get(queries.size() - 1) == lastGoodQuery && lastError == null) {
@@ -423,7 +439,10 @@ public class SQLQueryJob extends DataSourceJob
                 if (controlResult.getTransformed() != null) {
                     element = controlResult.getTransformed();
                 } else {
-                    return true;
+                    if (controlResult.isSuccess()) {
+                        lastGoodQuery = element;
+                    }
+                    return controlResult.isSuccess();
                 }
             } catch (Throwable e) {
                 if (!(e instanceof DBException)) {
@@ -443,13 +462,31 @@ public class SQLQueryJob extends DataSourceJob
             log.error("Unsupported SQL element type: " + element);
             return false;
         }
+
+        // Query may be a nested script
+        List<SQLScriptElement> nestedElements = sqlQuery.getScriptElements();
+
+        for (SQLScriptElement nestedElement : nestedElements) {
+            if (!(nestedElement instanceof SQLQuery nestedQuery)) {
+                log.error("Unsupported SQL element type: " + element);
+                return false;
+            }
+
+            if (!executeSingleElement(session, fireEvents, nestedQuery)) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    private boolean executeSingleElement(@NotNull DBCSession session, boolean fireEvents, SQLQuery sqlQuery) {
         lastError = null;
 
         if (!skipConfirmation && getDataSourceContainer().getConnectionConfiguration().getConnectionType().isConfirmExecute()) {
             // Validate all transactional queries
-            if (!SQLSemanticProcessor.isSelectQuery(session.getDataSource().getSQLDialect(), element.getText())) {
+            if (!SQLSemanticProcessor.isSelectQuery(session.getDataSource().getSQLDialect(), sqlQuery.getText())) {
 
-                int confirmResult = confirmQueryExecution((SQLQuery)element, queries.size() > 1);
+                int confirmResult = confirmQueryExecution(sqlQuery, queries.size() > 1);
                 switch (confirmResult) {
                     case IDialogConstants.NO_ID:
                         return true;
@@ -634,13 +671,14 @@ public class SQLQueryJob extends DataSourceJob
         }
     }
 
-    private void executeStatement(@NotNull DBCSession session, SQLQuery sqlQuery, long startTime, SQLQueryResult curResult) throws DBCException {
+    private void executeStatement(@NotNull DBCSession session, SQLQuery sqlQuery, long startTime, SQLQueryResult curResult) throws DBException {
         AbstractExecutionSource source = new AbstractExecutionSource(dataContainer, session.getExecutionContext(), partSite.getPart(), sqlQuery);
         source.setScriptContext(scriptContext);
+
         DBDDataReceiver dataReceiver = resultsConsumer.getDataReceiver(sqlQuery, resultSetNumber);
         // display dataReceiver: org.jkiss.dbeaver.ui.controls.resultset.ResultSetDataReceiver
         // export dataReceiver: org.jkiss.dbeaver.tools.transfer.stream.StreamTransferConsumer
-        if(dataReceiver != null && dataReceiver instanceof StreamTransferConsumer streamTransferConsumer){
+        if(dataReceiver!=null && dataReceiver instanceof StreamTransferConsumer streamTransferConsumer){
             String driverClassName = session.getDataSource().getContainer().getDriver().getDriverClassName();
             if ("com.yzsec.dsg.sdk.jdbc.YzSecDriver".equals(driverClassName)) {
                 try (JDBCSession dbsession = DBUtils.openUtilSession(new VoidProgressMonitor(), session.getDataSource(), "Check export");
@@ -664,6 +702,7 @@ public class SQLQueryJob extends DataSourceJob
                 }
             }
         }
+
         final DBCStatement dbcStatement = DBUtils.makeStatement(
             source,
             session,
@@ -736,7 +775,7 @@ public class SQLQueryJob extends DataSourceJob
                             // Kind of bug in the driver. It says it has resultset but returns null
                             break;
                         } else {
-//                            DBDDataReceiver dataReceiver = resultsConsumer.getDataReceiver(sqlQuery, resultSetNumber);
+                            //DBDDataReceiver dataReceiver = resultsConsumer.getDataReceiver(sqlQuery, resultSetNumber);
                             if (dataReceiver != null) {
                                 try {
                                     hasResultSet = fetchQueryData(session, resultSet, curResult, curResult.addExecuteResult(true), dataReceiver, true);
@@ -824,6 +863,10 @@ public class SQLQueryJob extends DataSourceJob
             //monitor.subTask("Close query");
             if (!keepStatementOpen()) {
                 closeStatement();
+            } else {
+                if (dbcStatement instanceof AbstractStatement<?> as) {
+                    as.runCloseDependants();
+                }
             }
         }
     }
@@ -839,7 +882,7 @@ public class SQLQueryJob extends DataSourceJob
             if (dataReceiver != null && !(dataReceiver instanceof IDataTransferConsumer)) {
                 try {
                     fetchExecutionResult(session, dataReceiver, query);
-                } catch (DBCException e) {
+                } catch (DBException e) {
                     log.error("Error generating execution result stats", e);
                 }
             }
@@ -869,58 +912,63 @@ public class SQLQueryJob extends DataSourceJob
 
     }
 
-    private void fetchExecutionResult(@NotNull DBCSession session, @NotNull DBDDataReceiver dataReceiver, @NotNull SQLQuery query) throws DBCException
-    {
+    private void fetchExecutionResult(@NotNull DBCSession session, @NotNull DBDDataReceiver dataReceiver, @NotNull SQLQuery query) throws DBException {
         // Fetch fake result set
-        StatResultSet fakeResultSet = new StatResultSet(session, curStatement);
-        SQLQueryResult resultInfo = new SQLQueryResult(query);
-        SQLQueryResult.ExecuteResult executeResult = resultInfo.addExecuteResult(true);
+        try (LocalStatement statStatement = new LocalStatement(session, "statistics")) {
+            try (StatResultSet fakeResultSet = new StatResultSet(session, statStatement)) {
+                SQLQueryResult resultInfo = new SQLQueryResult(query);
+                SQLQueryResult.ExecuteResult executeResult = resultInfo.addExecuteResult(true);
 
-        if (statistics.getStatementsCount() > 1) {
-            // Multiple statements - show script statistics
-            fakeResultSet.addColumn("Queries", DBPDataKind.NUMERIC);
-            fakeResultSet.addColumn("Updated Rows", DBPDataKind.NUMERIC);
-            fakeResultSet.addColumn("Execute time", DBPDataKind.NUMERIC);
-            fakeResultSet.addColumn("Fetch time", DBPDataKind.NUMERIC);
-            fakeResultSet.addColumn("Total time", DBPDataKind.NUMERIC);
-            fakeResultSet.addColumn("Start time", DBPDataKind.DATETIME);
-            fakeResultSet.addColumn("Finish time", DBPDataKind.DATETIME);
-            fakeResultSet.addRow(
-                statistics.getStatementsCount(),
-                statistics.getRowsUpdated() < 0 ? 0 : statistics.getRowsUpdated(),
-                RuntimeUtils.formatExecutionTime(statistics.getExecuteTime()),
-                RuntimeUtils.formatExecutionTime(statistics.getFetchTime()),
-                RuntimeUtils.formatExecutionTime(statistics.getTotalTime()),
-                new SimpleDateFormat(DBConstants.DEFAULT_TIMESTAMP_FORMAT).format(new Date(statistics.getStartTime())),
-                new SimpleDateFormat(DBConstants.DEFAULT_TIMESTAMP_FORMAT).format(new Date()));
-            executeResult.setResultSetName(SQLEditorMessages.editors_sql_statistics);
-        } else {
-            // Single statement - reorder fields to prioritize the important ones
-            // Important fields like "Updated Rows" and "Execute time" are now displayed before the query text for easier access.
-            long updateCount = statistics.getRowsUpdated();
-            fakeResultSet.addColumn("Updated Rows", DBPDataKind.NUMERIC);
-            fakeResultSet.addColumn("Execute time", DBPDataKind.NUMERIC);
-            fakeResultSet.addColumn("Start time", DBPDataKind.DATETIME);
-            fakeResultSet.addColumn("Finish time", DBPDataKind.DATETIME);
-            fakeResultSet.addColumn("Query", DBPDataKind.STRING);
-            fakeResultSet.addRow(
-                    updateCount,
-                    RuntimeUtils.formatExecutionTime(statistics.getExecuteTime()),
-                    new Date(statistics.getStartTime()),
-                    new Date(),
-                    query.getText());
-            executeResult.setResultSetName(SQLEditorMessages.editors_sql_data_grid);
+                if (statistics.getStatementsCount() > 1) {
+                    // Multiple statements - show script statistics
+                    fakeResultSet.addColumn("Queries", DBPDataKind.NUMERIC);
+                    fakeResultSet.addColumn("Updated Rows", DBPDataKind.NUMERIC);
+                    fakeResultSet.addColumn("Execute time", DBPDataKind.NUMERIC);
+                    fakeResultSet.addColumn("Fetch time", DBPDataKind.NUMERIC);
+                    fakeResultSet.addColumn("Total time", DBPDataKind.NUMERIC);
+                    fakeResultSet.addColumn("Start time", DBPDataKind.DATETIME);
+                    fakeResultSet.addColumn("Finish time", DBPDataKind.DATETIME);
+                    fakeResultSet.addRow(
+                        statistics.getStatementsCount(),
+                        statistics.getRowsUpdated() < 0 ? 0 : statistics.getRowsUpdated(),
+                        RuntimeUtils.formatExecutionTime(statistics.getExecuteTime()),
+                        RuntimeUtils.formatExecutionTime(statistics.getFetchTime()),
+                        RuntimeUtils.formatExecutionTime(statistics.getTotalTime()),
+                        new SimpleDateFormat(DBConstants.DEFAULT_TIMESTAMP_FORMAT).format(new Date(statistics.getStartTime())),
+                        new SimpleDateFormat(DBConstants.DEFAULT_TIMESTAMP_FORMAT).format(new Date())
+                    );
+                    executeResult.setResultSetName(SQLEditorMessages.editors_sql_statistics);
+                } else {
+                    // Single statement - reorder fields to prioritize the important ones
+                    // Important fields like "Updated Rows" and "Execute time" are now displayed before the query text for easier access.
+                    long updateCount = statistics.getRowsUpdated();
+                    fakeResultSet.addColumn("Updated Rows", DBPDataKind.NUMERIC);
+                    fakeResultSet.addColumn("Execute time", DBPDataKind.NUMERIC);
+                    fakeResultSet.addColumn("Start time", DBPDataKind.DATETIME);
+                    fakeResultSet.addColumn("Finish time", DBPDataKind.DATETIME);
+                    fakeResultSet.addColumn("Query", DBPDataKind.STRING);
+                    fakeResultSet.addRow(
+                        updateCount,
+                        RuntimeUtils.formatExecutionTime(statistics.getExecuteTime()),
+                        new Date(statistics.getStartTime()),
+                        new Date(),
+                        query.getText()
+                    );
+                    executeResult.setResultSetName(SQLEditorMessages.editors_sql_data_grid);
+                }
+                fetchQueryData(session, fakeResultSet, resultInfo, executeResult, dataReceiver, false);
+            }
         }
-        fetchQueryData(session, fakeResultSet, resultInfo, executeResult, dataReceiver, false);
     }
 
-    private boolean fetchQueryData(DBCSession session, DBCResultSet resultSet, SQLQueryResult result, SQLQueryResult.ExecuteResult executeResult, DBDDataReceiver dataReceiver, boolean updateStatistics)
-        throws DBCException
-    {
-        if (dataReceiver == null) {
-            // No data pump - skip fetching stage
-            return false;
-        }
+    private boolean fetchQueryData(
+        @NotNull DBCSession session,
+        @Nullable DBCResultSet resultSet,
+        @Nullable SQLQueryResult result,
+        @NotNull SQLQueryResult.ExecuteResult executeResult,
+        @NotNull DBDDataReceiver dataReceiver,
+        boolean updateStatistics
+    ) throws DBException {
         if (resultSet == null) {
             return false;
         }
@@ -933,7 +981,7 @@ public class SQLQueryJob extends DataSourceJob
         monitor.subTask("Fetch result set");
         DBFetchProgress fetchProgress = new DBFetchProgress(session.getProgressMonitor());
 
-        dataReceiver.fetchStart(session, resultSet, rsOffset, rsMaxRows);
+        DBDDataReceiver.startFetchWorkflow(dataReceiver, session, resultSet, rsOffset, rsMaxRows);
 
         try {
             String sourceName = null;//resultSet.getResultSetName();
@@ -990,12 +1038,6 @@ public class SQLQueryJob extends DataSourceJob
                     log.error("Error while closing resultset", e);
                 }
             }
-            try {
-                dataReceiver.fetchEnd(session, resultSet);
-            } catch (Throwable e) {
-                log.error("Error while handling end of result set fetch", e);
-            }
-            dataReceiver.close();
         }
 
         if (result != null) {
@@ -1011,28 +1053,25 @@ public class SQLQueryJob extends DataSourceJob
 
     private boolean keepStatementOpen()
     {
+        if (getExecutionContext().getDataSource().getContainer().getDriver().isThreadSafeDriver()) {
+            return false;
+        }
         // Only in single query mode and if pref option set to true
         return queries.size() == 1 &&
             getDataSourceContainer().getPreferenceStore().getBoolean(ResultSetPreferences.KEEP_STATEMENT_OPEN);
     }
 
-    private void closeStatement()
-    {
+    private void closeStatement() {
         if (curStatement != null) {
             try {
                 for (DBCResultSet resultSet : curResultSets) {
-                    resultSet.close();
+                    DBUtils.closeSafely(resultSet);
                 }
             } finally {
                 curResultSets.clear();
 
-                try {
-                    curStatement.close();
-                } catch (Throwable e) {
-                    log.error("Error closing statement", e);
-                } finally {
-                    curStatement = null;
-                }
+                DBUtils.closeSafely(curStatement);
+                curStatement = null;
             }
         }
     }
